--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
        
         </div>
 
-        <div class="grid grid-cols-1 lg:grid-cols-4 gap-6 md:gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 md:gap-8">
           <div class="menu-item group">
             <div class="bg-gray-50 rounded-xl p-6 transition-transform duration-300 hover:scale-105">
               <div class="aspect-square mb-4">
